# mapories

./: README.md
client/: declarations.d.ts  package-lock.json  package.json  tsconfig.json
client/app/: layout.tsx  page.tsx
client/app/globe/: page.tsx
client/app/home/: page.tsx
client/app/login/: page.tsx
client/components/AppShell/: AppShell.tsx
client/components/Authentication/: Authentication.tsx  GoogleButton.tsx
client/components/ColorSchemeToggle/: ColorSchemeToggle.tsx
client/components/Globe/: Globe.module.css  Globe.tsx
client/components/Hero/: Hero.tsx
client/components/Inputs/: AddressInput.tsx  ContainedInputs.module.css  ContainedInputs.tsx
client/components/Navigation/: Navbar.module.css  Navbar.tsx
server/: pyproject.toml
server/src/: app.py  run.py
server/src/routes/: __init__.py  helloworld.py
