[project]
name = "server"
version = "0.1.0"
description = "Server Side Application for Mapories"
authors = [
    {name = "Pablo Sandoval Rivas"}
]
readme = "README.md"
requires-python = ">= 3.9, <4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
